--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="card">
               <img
                 src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-                alt="A very long bridge, over the forest..."
+                alt="A very long bridge, over the forest"
                 class="card__image"
               />
               <div class="card__content">
